--- a/myapp/src/app/main/main.component.html
+++ b/myapp/src/app/main/main.component.html
@@ -3,35 +3,35 @@
   <table>
     <tr>
       <td [ngStyle]="setStyle()">
-        <a href={{img_src}}>photo</a>
+        <span><a href="">photo</a></span>
       </td>
       <td [ngStyle]="setStyle()">
-        <a href={{img_src}}>blog</a>
+      <span><a href="">twitter</a></span>
       </td>
       <td [ngStyle]="setStyle()">
-        <a href={{img_src}}>social</a>
-      </td>
-    </tr>
-    <tr>
-      <td [ngStyle]="setStyle()">
-        <a href={{img_src}}>twitter</a>
-      </td>
-      <td [ngStyle]="setStyle()">
-        <a href={{img_src}}>home</a>
-      </td>
-      <td [ngStyle]="setStyle()">
-        <a href={{img_src}}>work</a>
+       <span><a href="">twitter</a></span>
       </td>
     </tr>
     <tr>
       <td [ngStyle]="setStyle()">
-        <a href={{img_src}}>contact</a>
+        <span><a href="">twitter</a></span>
       </td>
       <td [ngStyle]="setStyle()">
-        <a href={{img_src}}>shop</a>
+        <span><a href="">twitter</a></span>
       </td>
       <td [ngStyle]="setStyle()">
-        <a href={{img_src}}>about</a>
+        <span><a href="">twitter</a></span>
+      </td>
+    </tr>
+    <tr>
+      <td [ngStyle]="setStyle()">
+        <span><a href="">twitter</a></span>
+      </td>
+      <td [ngStyle]="setStyle()">
+        <span><a href="">twitter</a></span>
+      </td>
+      <td [ngStyle]="setStyle()">
+        <span><a href="">twitter</a></span>
       </td>
     </tr>
   </table>
@@ -103,17 +103,12 @@
     <h2> About </h2>
     <br>
     <p>
-      As people, I believe we are at our best when we seek the best for one another.-->
-      I enjoy working with people and empowering the ones next to me.
-      A strong bond can withhold any obstacles in achieving the team goals.
-
-      As people, I believe we are at our best when we seek the best for one another.-->
-      I enjoy working with people and empowering the ones next to me.
-      A strong bond can withhold any obstacles in achieving the team goals.
-
-      <!--As people, I believe we are at our best when we seek the best for one another.&ndash;&gt;-->
-      <!--I enjoy working with people and empowering the ones next to me.-->
-      <!--A strong bond can withhold any obstacles in achieving the team goals.-->
+      I'm an application developer. I focus on IoT applications and development.
+      I've had the fundamental backgrounds: Physics, Math, Computer Science in formal university undergrad education.
+      In 2015, I shifted my focus toward programming.
+      And by 2016, I was working on a startup with three other people that were, on average, 6 years older than me.
+      Of course the startup was unsuccessful. Nevertheless, I grew and learned a ton from building the startup.
+      After that I tried online learning through Udacity, where I learned Neural Net and other Machine Learning techniques.
     </p>
   </div>
   <!--<span id="content_text"> </span>-->
