--- a/myapp/src/app/app.component.css
+++ b/myapp/src/app/app.component.css
@@ -1,73 +1,4 @@
 @media (max-width: 700px) {
-  .pane_top {
-    color: white;
-    position: static;
-    opacity: 0.7;
-    display: none;
-    z-index: 100;
-    width: 100%;
-    height: 80%;
-    font-size: 14pt; }
-    .pane_top .about {
-      position: static;
-      height: 100%; }
-      .pane_top .about a, .pane_top .about p, .pane_top .about h2 {
-        display: inline-flex; }
-      .pane_top .about h1 {
-        letter-spacing: 3pt;
-        color: black;
-        opacity: .7;
-        padding: 15px;
-        margin-top: 2px; }
-      .pane_top .about p {
-        top: 0px;
-        opacity: .7;
-        letter-spacing: 1pt;
-        position: relative;
-        padding-left: 20px;
-        font-size: 12pt;
-        font-weight: 500;
-        text-align: left; }
-      .pane_top .about p#name {
-        position: relative;
-        bottom: 0px;
-        font-size: 11pt; }
-    .pane_top img#self {
-      opacity: .8;
-      float: left;
-      position: absolute;
-      right: 5px;
-      top: 10px;
-      padding: 10px;
-      border-radius: 50%;
-      width: auto;
-      height: 75px; }
-
-  #social_media_bar {
-    display: flex;
-    position: absolute;
-    bottom: -1px;
-    width: 100%;
-    height: auto;
-    overflow: auto;
-    white-space: nowrap;
-    background-color: #333333;
-    opacity: .9; }
-    #social_media_bar a {
-      display: inline-flex;
-      color: black;
-      text-align: center;
-      padding-bottom: 5px;
-      padding-top: 5px;
-      text-decoration: none; }
-      #social_media_bar a img {
-        opacity: .9;
-        padding: 3px;
-        display: block;
-        margin: auto;
-        width: 33px;
-        height: 33px; }
-
   div#footer {
     display: inline-block;
     position: fixed;
@@ -86,184 +17,23 @@
     div#footer a {
       text-decoration: none; }
       div#footer a img#social_icon {
-        margin-top: 2%;
-        width: 16%;
+        margin-top: 3%;
+        width: 12%;
         height: auto;
         opacity: .7; }
     div#footer p {
-      margin-top: -1%;
+      margin-top: 1%;
       text-align: center;
       color: #ffa117;
-      font-size: .7em; } }
+      font-size: .7em;
+      letter-spacing: 3px; } }
 @media (min-width: 701px) and (max-width: 1200px) {
-  .pane_top {
-    color: white;
-    background-color: red;
-    position: static;
-    opacity: 0.7;
-    display: none;
-    z-index: 100;
-    width: 100%;
-    height: 20%;
-    font-size: 14pt; }
-    .pane_top .about {
-      position: static;
-      height: 100%; }
-      .pane_top .about a, .pane_top .about p, .pane_top .about h2 {
-        display: inline-flex; }
-      .pane_top .about h {
-        letter-spacing: 3pt;
-        color: black;
-        opacity: .7;
-        padding: 15px;
-        margin-top: 2px; }
-      .pane_top .about p {
-        top: 0px;
-        opacity: .7;
-        letter-spacing: 1pt;
-        position: relative;
-        padding-left: 20px;
-        font-size: 12pt;
-        font-weight: 500;
-        text-align: left; }
-      .pane_top .about p#name {
-        position: relative;
-        bottom: 0px;
-        font-size: 11pt; }
-    .pane_top img#self {
-      opacity: .8;
-      float: left;
-      position: absolute;
-      right: 5px;
-      top: 10px;
-      padding: 10px;
-      z-index: 100;
-      border-radius: 50%;
-      width: auto;
-      height: 75px; }
-
-  #main {
-    opacity: .7;
-    position: static;
-    top: 20%;
-    display: block;
-    height: 65%;
-    background-size: 85% 85%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-color: black; }
-    #main #visual_pane {
-      color: #ffffff;
-      width: 100%;
-      height: auto;
-      position: static;
-      z-index: 98; }
-      #main #visual_pane .main_menu {
-        height: auto;
-        text-align: center; }
-        #main #visual_pane .main_menu .menu_title_wrapper {
-          width: auto;
-          height: auto;
-          z-index: 99; }
-          #main #visual_pane .main_menu .menu_title_wrapper .menu_title {
-            letter-spacing: 4pt;
-            opacity: 1;
-            font-size: 50pt;
-            font-weight: 500; }
-            #main #visual_pane .main_menu .menu_title_wrapper .menu_title span.menu_subtitle {
-              padding: 0;
-              font-size: 35pt; }
-            #main #visual_pane .main_menu .menu_title_wrapper .menu_title span.menu_subtitle_selected {
-              color: darkorange;
-              padding: 0;
-              font-size: 35pt; }
-        #main #visual_pane .main_menu li {
-          list-style-type: none;
-          opacity: 1;
-          font-size: 35pt;
-          font-weight: 400;
-          letter-spacing: 2pt;
-          padding-bottom: 5px; }
-        #main #visual_pane .main_menu li.selected {
-          font-size: 35pt;
-          color: darkorange; }
-        #main #visual_pane .main_menu li:first-child {
-          padding-top: 10px; }
-
-  #monolog_pane {
-    position: static;
-    height: 25%;
-    width: 100%; }
-    #monolog_pane #bread_crums {
-      position: relative;
-      top: 3px;
-      text-align: center;
-      height: auto;
-      font-size: 10pt;
-      letter-spacing: 1pt;
-      color: black;
-      opacity: .7; }
-      #monolog_pane #bread_crums li {
-        font-weight: 600;
-        display: inline;
-        list-style-type: none; }
-      #monolog_pane #bread_crums li.selected {
-        color: darkorange; }
-    #monolog_pane span#content {
-      padding: 1px; }
-      #monolog_pane span#content h4 {
-        padding-top: 10px;
-        padding-left: 10px; }
-      #monolog_pane span#content p {
-        border-top-right-radius: 3px;
-        border-bottom-right-radius: 3px;
-        color: black;
-        opacity: .7;
-        font-size: 10pt;
-        font-weight: lighter;
-        text-indent: 0; }
-      #monolog_pane span#content img#me {
-        border-radius: 50%;
-        opacity: .8;
-        float: left;
-        width: 50px;
-        height: auto;
-        margin: 10px;
-        margin-left: 10px; }
-
-  #social_media_bar {
-    position: static;
-    width: 50%;
-    height: auto;
-    overflow: auto;
-    white-space: nowrap; }
-    #social_media_bar a {
-      width: auto;
-      height: auto;
-      display: inline-block;
-      color: black;
-      text-align: center;
-      padding: 14px;
-      padding-bottom: 0;
-      padding-top: 20px;
-      text-decoration: none;
-      font-size: 35pt; }
-      #social_media_bar a img {
-        opacity: .5;
-        padding: 10px;
-        padding-top: 8px;
-        padding-bottom: 8px;
-        display: block;
-        margin: auto;
-        width: 65px;
-        height: 65px; }
-
   div#footer {
     display: inline-block;
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 90px;
+    height: 10%;
     color: white;
     text-align: center;
     background-color: white;
@@ -273,15 +43,46 @@
       width: auto;
       margin-right: auto;
       margin-left: auto; }
-    div#footer img#social_icon {
-      margin-top: 15px;
-      width: 50px;
-      height: 50px;
-      opacity: .7; }
+    div#footer a {
+      text-decoration: none; }
+      div#footer a img#social_icon {
+        margin-top: 2%;
+        width: 80px;
+        height: auto;
+        opacity: .7; }
     div#footer p {
-      margin-top: 3px;
+      margin-top: 1%;
       text-align: center;
-      color: black;
-      font-size: .8em; } }
+      color: #ffa117;
+      font-size: 1em;
+      letter-spacing: 3px; } }
+@media (min-width: 1200px) {
+  div#footer {
+    display: inline-block;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 15%;
+    color: white;
+    text-align: center;
+    background-color: white;
+    opacity: .9; }
+    div#footer span#socialmedia {
+      height: auto;
+      width: auto;
+      margin-right: auto;
+      margin-left: auto; }
+    div#footer a {
+      text-decoration: none; }
+      div#footer a img#social_icon {
+        margin-top: 2%;
+        width: 8%;
+        height: auto;
+        opacity: .7; }
+    div#footer p {
+      text-align: center;
+      color: #ffa117;
+      font-size: 1.2em;
+      letter-spacing: 3px; } }
 
 /*# sourceMappingURL=app.component.css.map */
