--- a/myapp/src/app/main/main.component.html
+++ b/myapp/src/app/main/main.component.html
@@ -3,35 +3,35 @@
   <table>
     <tr>
       <td [ngStyle]="setStyle()">
-        <span><a href="">photo</a></span>
+        <span><a href="">social</a></span>
       </td>
       <td [ngStyle]="setStyle()">
-      <span><a href="">twitter</a></span>
+      <span><a href="">social</a></span>
       </td>
       <td [ngStyle]="setStyle()">
-       <span><a href="">twitter</a></span>
-      </td>
-    </tr>
-    <tr>
-      <td [ngStyle]="setStyle()">
-        <span><a href="">twitter</a></span>
-      </td>
-      <td [ngStyle]="setStyle()">
-        <span><a href="">twitter</a></span>
-      </td>
-      <td [ngStyle]="setStyle()">
-        <span><a href="">twitter</a></span>
+       <span><a href="">social</a></span>
       </td>
     </tr>
     <tr>
       <td [ngStyle]="setStyle()">
-        <span><a href="">twitter</a></span>
+        <span><a href="">social</a></span>
       </td>
       <td [ngStyle]="setStyle()">
-        <span><a href="">twitter</a></span>
+        <span><a href="">social</a></span>
       </td>
       <td [ngStyle]="setStyle()">
-        <span><a href="">twitter</a></span>
+        <span><a href="">social</a></span>
+      </td>
+    </tr>
+    <tr>
+      <td [ngStyle]="setStyle()">
+        <span><a href="">social</a></span>
+      </td>
+      <td [ngStyle]="setStyle()">
+        <span><a href="">social</a></span>
+      </td>
+      <td [ngStyle]="setStyle()">
+        <span><a href="">social</a></span>
       </td>
     </tr>
   </table>
