--- a/myapp/src/app/main/main.component.scss
+++ b/myapp/src/app/main/main.component.scss
@@ -1,6 +1,13 @@
 @import '../palette.scss';
 @import url('https://fonts.googleapis.com/css?family=Slabo+13px|Suez+13px||Ultra');
 //
+//$white: #ffffff;
+//$breakpoint-mobile: 700px;
+//$breakpoint-tablet: 1200px;
+//$breakpoint-desk: 1600px;
+//$opacity_inactive: .8;
+//$background_uri: none;
+//
 //@-webkit-keyframes move-the-object {
 //  0%   { left: -300px; }
 //  //50% { left: 100px;  }
@@ -243,8 +250,6 @@ div#about_section {
 }
 
 
-
-
 @media (min-width: $breakpoint-mobile + 1) and (max-width: $breakpoint-tablet) {
   div#seattle_based_slogan{
     h3{
@@ -269,7 +274,31 @@ div#about_section {
       font-size: 6em;
     }
   }
-
+  @mixin menu_base(){
+    text-align: center;
+    width: 80%;
+    height: auto;
+    color: #333333;
+    font-size: 5em;
+    font-weight: lighter;
+    letter-spacing: 20px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  div#menu_button{
+    @include menu_base();
+    border-bottom: solid;
+    // position: absolute;
+    bottom: 0px;
+    border-width: 1px;
+    font-size: em;
+  }
+  div#menu_button_flip{
+    @include menu_base();
+    margin-top: 3%;
+    border-top: solid;
+    border-width: 1px;
+  }
   #menu {
     position: static;
     height: 80%;
@@ -277,10 +306,6 @@ div#about_section {
     margin-right: auto;
     margin-left: auto;
     table {
-      // margin-top: 5%;
-      //  margin-bottom: 5%;
-      //border-bottom:5px solid #bfbfbf ;
-      //border-top: 5px solid #bfbfbf;
       border-collapse: collapse;
       text-align: center;
     }
@@ -290,13 +315,11 @@ div#about_section {
       }
       td{
         width: 33.333%;
-        // height: 100%;
-
       span{
         background-color: black ;
         position: relative;
-        bottom: 40px;
-        right: 35px;
+        bottom: 35px;
+        right: 25px;
         width: 100px;
         font-size: 1.5em;
         font-weight: 600;
@@ -308,6 +331,76 @@ div#about_section {
         }
       }
       }
+    }
+  }
+  div#seattle_based_slogan{
+    display: block;
+    text-align: center;
+    height: auto;
+    margin-top: 25%;
+    h3{
+      font-size: 5em;
+      font-family: 'Ultra', serif;
+      padding-top: 10%;
+      padding-bottom: 0;
+      opacity: .7;
+      // opacity: .6;
+    }
+    p{
+      font-size: 3em;
+      color: $link-font-color;
+      letter-spacing: 1px;
+      opacity: .9;
+    }
+  }
+
+  img#seattle_skyline {
+    margin-top: 70%;
+    height: auto;
+    width: 100%;
+    opacity: .5;
+    display: block;
+    filter: grayscale(100%);
+    -moz-box-shadow:    inset 0 0 100px #ffffff;
+    -webkit-box-shadow: inset 0 0 100px #ffffff;
+    box-shadow:         inset 0 0 60px #ffffff;
+  }
+
+  div#tanner_card {
+    padding-top: 10px;
+    width: 100%;
+    height: 35%;
+    text-align: right;
+    color: white;
+    font-size: 2em;
+    background-color: $cust-orange;
+    background-size: contain;
+    background-repeat: no-repeat;
+    box-shadow: inset 0 0 10px #ffffff;
+    //-moz-box-shadow:    inset 0 0 30px #ffffff;
+    //-webkit-box-shadow: inset 0 0 30px #ffffff;
+    img {
+      position: relative;
+      width: auto;
+      height: 110%;
+      // height: auto;
+      display: block;
+      bottom: 10%;
+      z-index: 0;
+    }
+    p#portfolio {
+      font-weight: bold;
+      font-size: 5em;
+      position: relative;
+      bottom: 50%;
+      right: 5%;
+      //animation
+      //-webkit-animation: move-the-object .5s 4,  move-the-object .5s 1;
+      //-moz-animation:    move-the-object .5s 1,  move-the-object .5s 1;
+      //-o-animation:      move-the-object .5s 1,  move-the-object .5s 1;
+      animation: move-the-object 1s infinite;
+      // animation-timing-function:ease-in-out;
+
     }
   }
 }
