--- a/myapp/src/app/main/main.component.html
+++ b/myapp/src/app/main/main.component.html
@@ -96,6 +96,7 @@
 </div>
 <div id="tanner_card">
   <img src="../../assets/medias/me_standing.png">
+  <!--<a href="../../assets//tannerphan.pdf" target='_blank'> Resume</a>-->
   <p id="portfolio"> Portfolio</p>
 </div>
 <div id="about_section">
@@ -111,6 +112,4 @@
       After that I tried online learning through Udacity, where I learned Neural Net and other Machine Learning techniques.
     </p>
   </div>
-  <!--<span id="content_text"> </span>-->
 </div>
-<!--<b>-->
