--- a/myapp/src/app/app.component.css
+++ b/myapp/src/app/app.component.css
@@ -4,7 +4,7 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 14%;
+    height: 12%;
     color: white;
     text-align: center;
     background-color: white;
@@ -17,23 +17,33 @@
     div#footer a {
       text-decoration: none; }
       div#footer a img#social_icon {
-        margin-top: 3%;
-        width: 12%;
-        height: auto;
+        margin-top: 5px;
+        width: auto;
+        height: 45%;
         opacity: .7; }
     div#footer p {
-      margin-top: 1%;
       text-align: center;
       color: #ffa117;
-      font-size: .7em;
-      letter-spacing: 3px; } }
+      font-size: .6em;
+      letter-spacing: 2px; } }
+@media (max-width: 700px) and (orientation: landscape) {
+  div#footer {
+    width: 100%;
+    height: 15%; }
+    div#footer a {
+      text-decoration: none; }
+      div#footer a img#social_icon {
+        width: auto;
+        height: 50%; }
+    div#footer p {
+      font-size: .5em; } }
 @media (min-width: 701px) and (max-width: 1200px) {
   div#footer {
     display: inline-block;
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 15%;
+    height: 12%;
     color: white;
     text-align: center;
     background-color: white;
@@ -46,16 +56,28 @@
     div#footer a {
       text-decoration: none; }
       div#footer a img#social_icon {
-        margin-top: 2%;
-        width: 80px;
-        height: auto;
-        opacity: .7; }
+        margin-top: 1%;
+        width: auto;
+        height: 40%;
+        opacity: .8; }
     div#footer p {
-      margin-top: 1%;
       text-align: center;
       color: #ffa117;
-      font-size: 1.2em;
+      font-size: .8em;
       letter-spacing: 3px; } }
+@media (min-width: 701px) and (max-width: 1200px) and (orientation: landscape) {
+  div#footer {
+    background-color: white;
+    width: 100%;
+    height: 15%; }
+    div#footer a {
+      text-decoration: none; }
+      div#footer a img#social_icon {
+        margin-top: 1%;
+        height: 45%;
+        width: auto; }
+    div#footer p {
+      font-size: 1em; } }
 @media (min-width: 1200px) {
   div#footer {
     display: inline-block;
@@ -76,8 +98,8 @@
       text-decoration: none; }
       div#footer a img#social_icon {
         margin-top: 2%;
-        width: 8%;
-        height: auto;
+        width: auto;
+        height: 50%;
         opacity: .7; }
     div#footer p {
       text-align: center;
