--- a/myapp/src/app/app.component.html
+++ b/myapp/src/app/app.component.html
@@ -14,6 +14,9 @@
     <a href='https://www.instagram.com/tann3rphan/' target='_top'>
       <img id="social_icon" src="assets/medias/instagram.png">
     </a>
+    <a href='https://github.com/tannerP' target='_top'>
+      <img id="social_icon" src="assets/medias/github.png">
+    </a>
     </span>
   <!--<p>{{footer_tog == true? 'Follow here':' &copy; tannerphan 2017'}}</p>-->
   <p> &copy; Tanner Phan 2017</p>
