--- a/myapp/src/app/app.component.scss
+++ b/myapp/src/app/app.component.scss
@@ -31,6 +31,8 @@
   }
 }
 
+
+
 @media(max-width: $breakpoint-mobile) {
   div#footer{
    // @include gradient-animation( #ffa117, #464646, 1s);
@@ -38,7 +40,7 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 14%;
+    height: 12%;
     color: white;
     text-align: center;
     background-color: white;
@@ -52,18 +54,37 @@
     a{
       text-decoration: none;
         img#social_icon{
-          margin-top: 3%;
-          width: 12%;
-          height: auto;
+          margin-top: 5px;
+          width: auto;
+          height: 45%;
           opacity: .7;
         }
     }
     p{
-      margin-top: 1%;
       text-align: center;
       color: #ffa117;
-      font-size: .7em;
-      letter-spacing: 3px;
+      font-size: .6em;
+      letter-spacing: 2px;
+    }
+  }
+}
+
+@media(max-width: $breakpoint-mobile) and (orientation: landscape) {
+  div#footer{
+    width: 100%;
+    height: 15%;
+    // @include gradient-animation( #ffa117, #464646, 1s);
+    span#socialmedia{
+    }
+    a{
+      text-decoration: none;
+      img#social_icon{
+        width: auto;
+        height: 50%;
+      }
+    }
+    p{
+      font-size: .5em;
     }
   }
 }
@@ -75,7 +96,7 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 15%;
+    height: 12%;
     color: white;
     text-align: center;
     background-color: white;
@@ -89,24 +110,47 @@
     a{
       text-decoration: none;
       img#social_icon{
-        margin-top: 2%;
-        width: 80px;
-        height: auto;
-        opacity: .7;
+        margin-top: 1%;
+        width: auto;
+        height: 40%;
+        opacity: .8;
       }
     }
     p{
-      margin-top: 1%;
       text-align: center;
       color: #ffa117;
-      font-size: 1.2em;
+      font-size: .8em;
       letter-spacing: 3px;
+    }
+  }
+}
+
+@media(min-width: $breakpoint-mobile + 1) and (max-width: $breakpoint-tablet)
+  and (orientation: landscape) {
+  div#footer{
+    // @include gradient-animation( #ffa117, #464646, 1s);
+    background-color: white;
+    width: 100%;
+    height: 15%;
+    span#socialmedia{
+    }
+    a{
+      text-decoration: none;
+      img#social_icon{
+        margin-top: 1%;
+        height: 45%;
+        width: auto;
+      }
+    }
+    p{
+      font-size: 1em;
     }
   }
 }
 
 
 @media (min-width: $breakpoint-tablet){
+
   div#footer{
     // @include gradient-animation( #ffa117, #464646, 1s);
     display: inline-block;
@@ -128,8 +172,8 @@
       text-decoration: none;
       img#social_icon{
         margin-top: 2%;
-        width: 8%;
-        height: auto;
+        width: auto;
+        height: 50%;
         opacity: .7;
       }
     }
