--- a/myapp/src/app/main/main.component.scss
+++ b/myapp/src/app/main/main.component.scss
@@ -48,15 +48,6 @@
 }
 
 @keyframes moving_background {
-  //0%, 20%, 50%, 80%, 100% {
-  //  transform(translateX(0));
-  //}
-  //40% {
-  //  transform(translateX(-30px));
-  //}
-  //60% {
-  //   transform(translateX(-15px));
-  //}
   0%, 30%  {
     transform: translateX(50px) rotate(50deg) translateY(15px);
   }
@@ -196,11 +187,13 @@ div#tanner_card{
       z-index: 0;
       }
   p#portfolio{
+    position: relative;
+    width: auto;
+    height: auto;
     font-weight: bold;
     font-size: 2em;
-    position: relative;
-    bottom: 40%;
-    right: 5%;
+    bottom: 50%;
+    right: 15%;
     //animation
     //-webkit-animation: move-the-object .5s 4,  move-the-object .5s 1;
     //-moz-animation:    move-the-object .5s 1,  move-the-object .5s 1;
@@ -211,18 +204,17 @@ div#tanner_card{
   }
 }
 
-
 div#about_section {
   height: 100%;
-  background: grey url('../../assets/medias/running.png');
-  background-position: 80% 50%;
+  background: white url('../../assets/medias/running.png');
+  background-position: left;
   background-size: auto 100%;
- // background-size: cover;
+  // background-size: cover;
   background-repeat: no-repeat;
-  filter: grayscale(50%);
+  //filter: grayscale(50%);
   div {
-    background: linear-gradient(black, #c7c7c7);
-    opacity: .7;
+    background: linear-gradient(black, #5e5e5e);
+    opacity: .6;
     width:auto;
     //height:100%;
     h2{
@@ -242,15 +234,92 @@ div#about_section {
       top: 5%;
       padding-bottom: 20%;
       color: white;
-      width: 75%;
+      width: 85%;
       height: auto;
       z-index: 10;
     }
   }
 }
 
+@media(max-width: $breakpoint-mobile) and (orientation: landscape) {
+  div#tanner_card{
+    padding-top: 10px;
+    width: 100%;
+    height: 35%;
+    text-align: right;
+    color: white;
+    font-size: 2em;
+    background-color: $cust-orange;
+    background-size: contain;
+    background-repeat: no-repeat;
+    box-shadow:         inset 0 0 10px #ffffff;
+    //-moz-box-shadow:    inset 0 0 30px #ffffff;
+    //-webkit-box-shadow: inset 0 0 30px #ffffff;
+    img{
+      position: relative;
+      width: auto;
+      height: 110%;
+      // height: auto;
+      display: block;
+      bottom: 10%;
+      z-index: 0;
+    }
+    p#portfolio{
+      position: relative;
+      width: auto;
+      height: auto;
+      font-weight: bold;
+      font-size: 2em;
+      bottom: 60%;
+      right: 15%;
+      //animation
+      //-webkit-animation: move-the-object .5s 4,  move-the-object .5s 1;
+      //-moz-animation:    move-the-object .5s 1,  move-the-object .5s 1;
+      //-o-animation:      move-the-object .5s 1,  move-the-object .5s 1;
+      animation:         move-the-object 1s infinite;
+      // animation-timing-function:ease-in-out;
 
-@media (min-width: $breakpoint-mobile + 1) and (max-width: $breakpoint-tablet) {
+    }
+  }
+
+  div#about_section {
+    height: 100%;
+    background: white url('../../assets/medias/running.png');
+    background-position: left;
+    background-size: 100% auto;
+    // background-size: cover;
+    background-repeat: no-repeat;
+    //filter: grayscale(50%);
+    div {
+      background: linear-gradient(black, #5e5e5e);
+      opacity: .6;
+      width: auto;
+      //height:100%;
+      h2 {
+        font-size: 4em;
+        display: block;
+        position: relative;
+        color: $cust-orange;
+        left: 10%;
+        top: 5%;
+        width: 50%;
+        //height: auto;
+      }
+      p {
+        font-size: 1em;
+        position: relative;
+        left: 10%;
+        top: 5%;
+        padding-bottom: 20%;
+        color: white;
+        width: 65%;
+        height: auto;
+        z-index: 10;
+      }
+    }
+  }
+}
+  @media (min-width: $breakpoint-mobile + 1) and (max-width: $breakpoint-tablet) {
   div#seattle_based_slogan{
     h3{
       font-size: 6em;
@@ -390,7 +459,7 @@ div#about_section {
     }
     p#portfolio {
       font-weight: bold;
-      font-size: 5em;
+      font-size: 4em;
       position: relative;
       bottom: 50%;
       right: 5%;
@@ -403,6 +472,44 @@ div#about_section {
 
     }
   }
+
+  div#about_section {
+    height: 100%;
+    background: white url('../../assets/medias/running.png');
+    background-position: left;
+    background-size: auto 100%;
+    // background-size: cover;
+    background-repeat: no-repeat;
+    //filter: grayscale(50%);
+    div {
+      background: linear-gradient(black, #5e5e5e);
+      opacity: .6;
+      width:auto;
+      //height:100%;
+      h2{
+        font-size: 6em;
+        display: block;
+        position: relative;
+        color: $cust-orange;
+        left: 10%;
+        top: 5%;
+        width: 50%;
+        //height: auto;
+      }
+      p{
+        font-size: 1em;
+        position: relative;
+        left: 10%;
+        top: 5%;
+        padding-bottom: 20%;
+        color: white;
+        width: 55%;
+        height: auto;
+        z-index: 10;
+      }
+    }
+  }
+
 }
 
 
@@ -412,7 +519,7 @@ div#about_section {
     width: 80%;
     height: auto;
     color: #333333;
-    font-size: 4em;
+    font-size: 5em;
     font-weight: lighter;
     letter-spacing: 20px;
     margin-right: auto;
@@ -441,15 +548,15 @@ div#about_section {
         // height: 100%;
         a {
           position: relative;
-          bottom: 40px;
+          bottom: 45px;
           right: 35px;
           background-color: black ;
           width: 100%;
-          font-size: 2em;
+          font-size: 3em;
           font-weight: 600;
           letter-spacing: 2px;
           text-decoration: none;
-          opacity: .7;
+          opacity: .9;
           color: #ffa117;
 
         }
@@ -542,18 +649,17 @@ div#about_section {
     }
   }
 
-
   div#about_section {
     height: 100%;
-    background: grey url('../../assets/medias/running.png');
-    background-position: 80% 50%;
+    background: white url('../../assets/medias/running.png');
+    background-position: left;
     background-size: auto 100%;
     // background-size: cover;
     background-repeat: no-repeat;
-    filter: grayscale(50%);
+    //filter: grayscale(50%);
     div {
       background: linear-gradient(black, #5e5e5e);
-      opacity: .7;
+      opacity: .6;
       width:auto;
       //height:100%;
       h2{
@@ -567,13 +673,13 @@ div#about_section {
         //height: auto;
       }
       p{
-        font-size: 3em;
+        font-size: 2em;
         position: relative;
         left: 10%;
         top: 5%;
         padding-bottom: 20%;
         color: white;
-        width: 75%;
+        width: 55%;
         height: auto;
         z-index: 10;
       }
